# prompthaus

./: .gitignore  LICENSE  README.md
hackathons/: README.md
hackathons/000/: prompt.md
hackathons/000/md/: game.js  index.html  styles.css
hackathons/000/tomczak_team/tama/: .env.template  CLAUDE.md  Makefile  README.md  pyproject.toml
hackathons/000/tomczak_team/tama/.claude/: settings.local.json
hackathons/000/tomczak_team/tama/app/: main.py
hackathons/000/tomczak_team/tama/app/api/: websocket.py
hackathons/000/tomczak_team/tama/app/models/: tamagotchi.py
hackathons/000/tomczak_team/tama/web/: index.html  script.js  style.css
hackathons/_starter/: .env.example  README.md  requirements.txt
hackathons/_starter/azure/: azure-open-ai.ipynb
hackathons/_starter/langchain/: langchain-basics.ipynb
hackathons/_starter/openai/: direct-open-ai.ipynb
hackathons/winners/: README.md
