[project]
name = "tama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pyyaml>=6.0.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "dotenv>=0.9.9",
]
